--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 
 const nel = NEL.of(1).concat(2).concat(3).concat(4).concat(NEL.fromArray([5,6,7,8]));
 
-const l1 = Leaf(1, "new jersey");
-const l2 = Leaf(2, "ohio");
-const l3 = Leaf(3, "hawaii");
-const l4 = Leaf(4, "utah");
-const l5 = Leaf(5, "the free state of vermont");
+const l1 = Leaf(1, "left eye");
+const l2 = Leaf(2, "right eye");
+const l3 = Leaf(3, "left hand");
 
-const b3 = Branch(l4, l5, "tiny ")
-const b2 = Branch(l2, l3, "minor ");
-const b1 = Branch(l1, b3, "maj ");
+const l7 = Leaf(5, "thumb");
+const l8 = Leaf(20, "pinky");
+
+const b4 = Branch(l7, l8, "right hand ");
 
 
-const tree = Branch(b1, b2, "us ");
+const b2 = Branch(l3, b4, "arms ");
+const b1 = Branch(l1, l2, "head ");
+
+
+const tree = Branch(b1, b2, "body ");
 
 </script>
 </body></html>
